--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -40,6 +40,7 @@
             android:theme="@style/AppTheme.FullScreen" >
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                        android:value=".ui.ImageGridActivity" />
+             
         </activity>
         <activity
             android:name="com.example.android.bitmapfun.ui.ImageGridActivity"
@@ -49,6 +50,12 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.android.bitmapfun.ui.ImageListActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" >
+           
         </activity>
     </application>
 </manifest>
