--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -46,16 +46,21 @@
             android:name="com.example.android.bitmapfun.ui.ImageGridActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme" >
-            <intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.android.bitmapfun.ui.TestResourcesLoadActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" >
+         
+        </activity>
+         <activity
+            android:name="com.example.android.bitmapfun.ui.TestFileLoadActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" >
+              <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="com.example.android.bitmapfun.ui.ImageListActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme" >
-           
         </activity>
     </application>
 </manifest>
